--- a/assets/sass/layout/header.scss
+++ b/assets/sass/layout/header.scss
@@ -64,10 +64,3 @@ header {
   width: 100%;
   background: $venetian-red;
 }
-
-// Only for the styleguide
-@media only screen and (max-width: $screen-xs-max) {
-  .download-link {
-    display: none;
-  }
-}
